--- a/style.css
+++ b/style.css
@@ -31,6 +31,17 @@ a, .btn {
 
 /* Desktop Nav */
 
+
+
+.image-rounder {
+    width: 45vh;
+    height: 100%; /* Keep the aspect ratio of 9:16 */
+    aspect-ratio: 9 / 16;
+    border-radius: 50%; /* Makes the image round */
+    object-fit: cover; /* Ensures the image fits inside the container */
+    overflow: hidden; /* Ensures the image stays within the rounded container */
+}
+
 nav, .nav-links {
     display: flex;
     
@@ -396,3 +407,5 @@ footer{
 footer p {
     text-align: center;
 }
+
+
